[package]
name = "simple_mdns_client"
version = "1.0.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2018"

description = "Simple mdns client"
documentation = "https://docs.rs/simple_mdns_client"
readme = "README.md"
license = "0BSD"
repository = "https://github.com/voysys/simple_mdns_client"

[dependencies]
dns-parser = "0.8"
if-addrs = "0.6"
net2 = "0.2"